--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
   <title>GitSearch</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+ 
 </head>
 <body>
   <app-root></app-root>
